# forecast-revenue-electricity

./: .gitignore  LICENSE  README.md  analysis.ipynb  pyproject.toml  training_results.xlsx  training_results_rrp.xlsx
src/: api_connector.py  descriptive_analysis.py  feature_engineering.py  forecasting_product.py  modeling.py  training.py  utils.py  visualization.py
