[project]
name = "forecast-revenue-electricity"
version = "1.0.1"
description = "Analysis and forecasting of global electricity prices using energy consumption data"
authors = [
    {name = "Gaspare"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8,<=3.12.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "plotly>=5.0.0",
    "kagglehub>=0.1.0",
    "python-dotenv>=1.0.0",
    "nbformat>=4.2.0",
    "scikit-learn>=1.3.0",
    "lightgbm>=4.0.0",
    "optuna>=3.6.0",
    "holidays>=0.56",
    "openpyxl",
    "holidays",
    "ruff"
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
    "ipykernel",
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
